--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -56,7 +56,7 @@ $td-box-colors: $dark, $primary, $secondary, $info, $primary-light, $gray-600, $
 $link-color: #034ad8 !default;
 $content-link-color: #0073ff !default;
 $link-decoration: none !default;
-$content-link-decoration: underline !default;
+$content-link-decoration: none !default;
 $link-hover-color: darken($link-color, 15%) !default;
 $link-hover-decoration: none !default;
 
